32-way fanout for ecmp ecmp support for IPv6
